MOBILE-4362 styles: Fix dark mode styles on activity restrictions

--- a/src/core/features/course/components/module/module.scss
+++ b/src/core/features/course/components/module/module.scss
@@ -196,3 +196,12 @@
         display: none;
     }
 }
+
+
+:host-context(html.dark) {
+    .activity-description-availabilityinfo {
+        .core-module-availabilityinfo {
+            background: var(--gray-800);
+        }
+    }
+}
